toggle fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -29,7 +29,8 @@ main {
         }
 
         span {
-            color: $light-grayish-blue;
+            // color: $light-grayish-blue;
+            color: #4F5369;
         }
 
         .anually_monthly_wrapper {
