--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ main .text_wrapper h1 {
   color: hsl(233deg, 13%, 49%);
 }
 main .text_wrapper span {
-  color: hsl(234deg, 14%, 74%);
+  color: #4F5369;
 }
 main .text_wrapper .anually_monthly_wrapper {
   display: flex;
